--- a/GaPFlow/fem/test.ipynb
+++ b/GaPFlow/fem/test.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# non-periodic boundary conditions and steady-state; inclined slider use case\n",
     "from GaPFlow import Problem\n",
     "\n",
     "sim = \"\"\"\n",
@@ -65,6 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# periodic boundary conditions and time-stepping; journal use case\n",
     "from GaPFlow import Problem\n",
     "\n",
     "sim = \"\"\"\n",
@@ -114,9 +116,6 @@
     "\"\"\"\n",
     "\n",
     "problem = Problem.from_string(sim)\n",
-    "#problem.solver.pre_run()\n",
-    "#problem.solver.print_system()\n",
-    "#problem.plot_topo()\n",
     "problem.run()\n",
     "problem.plot()"
    ]
